--- a/THANKS
+++ b/THANKS
@@ -10,6 +10,7 @@ and generally assist in the libtool maintainership process:
 
 Akim Demaille <demaille@inf.enst.fr>
 Andrey Slepuhin <pooh@msu.ru>
+Axel Thimm <Axel.Thimm@physik.fu-berlin.de>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
