--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-01-26  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltmain.in: reworded `dropped inter-library dependencies'
+	message, and added a warning about inter-library dependencies even 
+	for non-module builds
+
 1999-01-26  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* Makefile.am (install-data-hook): Don't show the if expression
