--- a/THANKS
+++ b/THANKS
@@ -37,6 +37,7 @@ Oliver Guntermann <og@informatik.uni-hannover.de>
 Raffaele Sena <raff@aromatic.com>
 Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>
 Ron O'Hara <rono@sentuny.com.au>
+Sam Vilain <sam.vilain@nz.unisys.com>
 Sebastian Wilhelmi <wilhelmi@ira.uka.de>
 Stephan Kulow <coolo@kde.org>
 Steven M. Schultz <sms@wlv.iipo.gtegsc.com>
