--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-01-27  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* libtoolize.in: search for A[MC]_PROG_LIBTOOL, not
+	AM_PROG_LIBTOOL
+	Reported by Jeff Garzik <jgarzik@pobox.com>
+
 1999-01-27  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* THANKS: Now that we have a policy, applied it to the existing
