--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-02-03  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltdl.c (lt_dlopenext): tmp would be trashed if shlib_ext was
+	longer than 3 characters
+
 1999-01-28  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* ltmain.in: Reverted this change of Alexandre's from the
