--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+1999-02-02  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+
+	* ltconfig.in: new config.guess returns *-*-cygwin now instead of
+	*-*-cygwin32.  sed -e 's%\(cygwin\|mingw\)32%\1%g' ltconfig.in
+	* ltmain.in:   sed -e 's%\(cygwin\|mingw\)32%\1%g' ltmain.in
+
+	* ltconfig.in (hardcode_libdir_flag_spec, allow_undefined_flag,
+	archive_cmds, archive_sym_cmds, old_archive_from_new_cmds):
+	removed duplication of config by assuming that `test $with_gcc =
+	yes' implies gnu ld, otherwise MSVC++ (which I haven't tested
+	since I inheritted the code from Ian Lance Taylor btw!) is implied.
+	
 1999-01-26  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 	
 	* configure.in:  It seems Alexandre accidentally removed the
