* ltmain.in (--mode=link): reinstate linking against ltlibraries.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-02-03  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+
+	* ltmain.in (--mode=link): reinstate linking against ltlibraries.
+
 1999-02-02  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* ltconfig.in: new config.guess returns *-*-cygwin now instead of
@@ -118,7 +122,7 @@
 	anything about the format of the date, just that it does not
 	contain `$'
 
-1999-01-22  Gary V. Vaughan  <garyv@oranda.demon.co.uk>
+1999-01-22  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* ltmain.in: Merged Thomas' ild-patch.  Untested.
 	* configure.in: ditto.
@@ -185,7 +189,7 @@
 	* demo/configure.in, demo/Makefile.am (DLPREOPEN): reverted; it
 	didn't make any difference.
 
-1999-01-21  Gary V. Vaughan  <garyv@oranda.demon.co.uk>
+1999-01-21  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* THANKS: Added Chris Laas <golem@MIT.EDU>
 	
@@ -529,7 +533,7 @@
 	* mdemo/Makefile.am: use -export-dynamic until libtool 
 	  and libltdl are able to handle module dependencies
 	  
-1999-01-14  Gary V. Vaughan  <garyv@oranda.demon.co.uk>
+1999-01-14  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* THANKS: added Mark Elbrecht.
 	* ltconfig.in (PATH_SEPARATOR): new variable to hold valid $PATH
@@ -1371,7 +1375,7 @@
 	* mdemo/modules/Makefile.am: replaced -export-symbols with 
 	-export-dynamic since it doesn't work for modules
 	
-1998-12-01  Gary V. Vaughan  <garyv@oranda.demon.co.uk>
+1998-12-01  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* README: Updated homepage pointer to gnu libtool page.
 
@@ -1394,7 +1398,7 @@
 
 	* config.guess, config.sub: imported from autoconf pre-2.13
 
-1998-11-27  Gary V. Vaughan  <garyv@oranda.demon.co.uk>
+1998-11-27  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
 	* libtool (AM_PROG_LD): Oops... we need to know the host_os for
 	the changes below.  I'm not sure whether mingw32 and os2 support
