--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-02-08  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* ltconfig.in (irix5*, library_names_spec): add soname_spec,
+	otherwise we can't dlopen
+
 1999-02-08  Thomas Tanner  <tanner@gmx.de>
 
 	* ltconfig.in: according to Marcus Sundberg <mackan@stacken.kth.se>
