--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-02-08  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (irix5*, irix6*, deplibs_check_method): use
+	file_magic for inter-library dependency tracking
+	
 	* ltconfig.in (irix5*, hardcode_libdir_separator): set it to a
 	colon, because on IRIX 5 only the last -rpath switch prevails, and 
 	it can be a list of colon-separated directories.  This change will 
