--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-02-12  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in: create libname.lai at link time, not at install time,
+ 	but still create it at install time if it is missing
+	Reported by Akim Demaille <demaille@inf.enst.fr>
+
 	* libltdl/ltdl.c (tryall_dlopen): strcmp filenames was reversed
 
 1999-02-11  Thomas Tanner  <tanner@gmx.de>
