--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-02-12  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
+
+	* libltdl/ltdl.h (_LTDLL_EXTERN): libltdl is no longer linked as a
+	shared library, so the _declspec's were preventing the linker from
+	resolving symbols on win32.  They have been removed now.
+
 1999-02-12  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* ltmain.in: don't try to read objdir/libname.la before it is
